@@ -1,3 +1,8 @@
+2007-02-10  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-settings-font.c: (load_cursor): if the new font path could not
+	be set, revert to the old path (fixes bug #397504)
+
 2007-02-09  Jens Granseuer  <jensgr@gmx.net>
 
 	Based on a patch by: Bastien Nocera <hadess@hadess.net>
